--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
+  
   "dependencies": {
     "@formkit/auto-animate": "^1.0.0-beta.6",
     "react": "^18.2.0",
