--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "react-scripts start"
   },
   
   "dependencies": {
     "@formkit/auto-animate": "^1.0.0-beta.6",
+    "react-scripts": "5.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3"
